--- a/Modulo02 - pokedexApp/assets/css/pokedex.css
+++ b/Modulo02 - pokedexApp/assets/css/pokedex.css
@@ -8,13 +8,67 @@
 
 
 
+.normal {
+    background-color:  #a6a877;
+}
+.grass  {
+    background-color: #77c850;
+}
+.fire{
+    background-color: #ee7f30;
+}
+.water  {
+    background-color: #678fee;
+}
+.electric {
+    background-color: #f7cf2e
+}
+.ice {
+    background-color: #98d5d7;
+}   
+.ground {
+    background-color:  #dfbf69;
+}
+.flying {
+    background-color:  #a98ff0;
+}
+.poison {
+    background-color:  #a040a0;
+}
+.fighting {
+    background-color: #bf3029;
+}
+.psychi {
+    background-color: #f65687
+}
+.dark {
+    background-color: #725847;
+}
+.rock {
+    background-color: #b8a137;
+}
+.bug {
+    background-color: #a8b720;
+}
+.ghost  {
+    background-color: #6e5896;
+}
+.steel  {
+    background-color: #b9b7cf;
+}
+.dragon {
+    background-color:  #6f38f6;
+}
+.fairy  {
+    background-color: #f9aec7;
+}
+
 
 
 
 .pokemon {
     margin: 0.5rem;
     padding: 1rem;
-    background-color: #49d0b0;
     color: white;
     border-radius: 1rem;
     display: flex;
@@ -37,12 +91,13 @@
 }
 
 .pokemon .detail .types .type {
-    background-color: #61e1ca;
     color: white;
     padding: .25rem .5rem;
     margin: .25rem 0;
     font-size: .625rem;
     border-radius: 1rem;
+    filter: brightness(1.1);
+    text-align: center;
 }
 
 .pokemon .detail img {
@@ -59,6 +114,28 @@
 .pokemon .name {
     color: white;
     margin-bottom: 0.25rem;
+    text-transform: capitalize;
+}
+
+
+.pagination {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 1rem;
+}
+
+
+.pagination  button{
+    background-color: #6c79bd;
+    color: white;
+    border: none;
+    border-radius: 1rem;
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
 }
 
 
